# FPL-Mentat

./: .gitignore  README.md  main.py  pyproject.toml
dbt/: dbt_project.yml
dbt/macros/: rolling_avg.sql  rolling_sum.sql  rolling_sum_unbounded.sql
dbt/models/: sources.yml
dbt/models/mart/: dim_deadlines.sql  dim_players.sql  dim_teams.sql  fact_ml_features.sql
dbt/models/staging/: stg_deadlines.sql  stg_fixtures.sql  stg_player_gameweek.sql  stg_players.sql  stg_teams.sql
dbt/seeds/: player_team_corrections.csv
eda/: eda.ipynb  eda_phase2.ipynb  eda_phase3.ipynb
notebooks/.ipynb_checkpoints/: baseline-checkpoint.ipynb
scripts/: ingest.py  raw_flush.py  raw_ingest.py
