[project]
name = "fpl-mentat"
authors = [{name = "Vikram Magal", email = "vikrammagal@outlook.com"}]
version = "0.1.4"
description = "Predict the best players in a Premier League gameweek to maximize your FPL points"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "datetime>=6.0",
    "dbt-core>=1.11.7",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.1",
    "jupyterlab>=4.5.6",
    "lightgbm>=4.6.0",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
